name:                bytestring-bi
version:             0.1.0.0
synopsis:            A type-class to convert to ByteString values and back
homepage:            https://github.com/bnordbo/bytestring-bi
license:             MPL-2.0
license-file:        LICENSE
author:              Bjørn Nordbø
maintainer:          bn@strangedays.no
category:            Data
build-type:          Simple
cabal-version:       >= 1.10

library
    exposed-modules:     Data.ByteString.Bijective

    other-modules:       Data.ByteString.Bijective.From
                       , Data.ByteString.Bijective.To
                       , Data.ByteString.Bijective.Hex

    build-depends:       base       == 4.*
                       , attoparsec == 0.11.*
                       , bytestring == 0.10.4.*
                       , errors     == 1.4.*
                       , text

    hs-source-dirs:      src
    default-language:    Haskell2010

test-suite bytestring-bi-unit
    type:                exitcode-stdio-1.0
    default-language:    Haskell2010
    main-is:             Main.hs
    hs-source-dirs:      test

    build-depends:       base             == 4.*
                       , bytestring       == 0.10.4.*
                       , bytestring-bi
                       , QuickCheck       == 2.7.*
                       , tasty            == 0.8.*
                       , tasty-quickcheck == 0.8.*
                       , text
