name:                bytestring-prosumer
version:             0.1
synopsis:            A type-class to convert to ByteString values and back
homepage:            https://github.com/bnordbo/bytestring-prosumer
license:             OtherLicense
license-file:        LICENSE
author:              Bjørn Nordbø, Toralf Wittner
maintainer:          Bjørn Nordbø <bn@strangedays.no>
category:            Data
build-type:          Simple
cabal-version:       >= 1.10

library
    exposed-modules:     Data.ByteString.Prosumer

    other-modules:       Data.ByteString.Prosumer.From
                       , Data.ByteString.Prosumer.To
                       , Data.ByteString.Prosumer.Hex

    build-depends:       base       == 4.*
                       , attoparsec == 0.12.*
                       , bytestring == 0.10.*
                       , text

    hs-source-dirs:      src
    default-language:    Haskell2010

test-suite bytestring-prosumer-unit
    type:                exitcode-stdio-1.0
    default-language:    Haskell2010
    main-is:             Main.hs
    hs-source-dirs:      test

    build-depends:       base                == 4.*
                       , bytestring          == 0.10.*
                       , bytestring-prosumer
                       , QuickCheck          == 2.7.*
                       , tasty               == 0.8.*
                       , tasty-quickcheck    == 0.8.*
                       , text
